--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "node-sass-middleware": "0.11.0",
+    "parse": "^2.18.0",
     "parse-dashboard": "^2.1.0",
     "parse-server": "^4.4.0"
   },
