--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "crypto-js": "^4.0.0",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-fileupload": "^1.2.0",
     "morgan": "~1.9.1",
     "node-sass-middleware": "0.11.0",
     "parse": "^2.18.0",
