--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "dependencies": {
+    "async": "^3.2.0",
     "cookie-parser": "~1.4.4",
     "cors": "2.8.5",
     "crypto-js": "^4.0.0",
