--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
+    "sweetalert2": "^10.13.1",
+    "sweetalert2-react-content": "^3.2.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
