--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.4.0",
     "async": "^3.2.0",
     "cookie-parser": "~1.4.4",
     "cors": "2.8.5",
@@ -23,10 +24,12 @@
     "express": "~4.16.1",
     "express-fileupload": "^1.2.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "node-sass-middleware": "0.11.0",
     "parse": "^2.18.0",
     "parse-dashboard": "^2.1.0",
-    "parse-server": "^4.4.0"
+    "parse-server": "^4.4.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
